# OpenDevin.OpenDevin

./: DIFF_20250624_035946.md  DIFF_20250624_050016.md  DIFF_20250624_212438.md  DIFF_20250628_014948.md  DIFF_20250628_014950.md  DIFF_20250628_015006.md  DIFF_20250628_020453.md  DIFF_20250629_120338.md  DIFF_20250629_120453.md  DIFF_20250629_120512.md  DIFF_20250629_120518.md  DIFF_20250629_121517.md  README.md  RECOMMENDATIONS_20250624_035950.md  RECOMMENDATIONS_20250624_050016.md  RECOMMENDATIONS_20250624_212438.md  RECOMMENDATIONS_20250628_014953.md  RECOMMENDATIONS_20250628_014957.md  RECOMMENDATIONS_20250628_015006.md  RECOMMENDATIONS_20250628_020453.md  RECOMMENDATIONS_20250629_120338.md  RECOMMENDATIONS_20250629_120457.md  RECOMMENDATIONS_20250629_120515.md  RECOMMENDATIONS_20250629_120518.md  RECOMMENDATIONS_20250629_121517.md  pyproject.toml
agenthub/: __init__.py
agenthub/openrouter_agent/: README.md  __init__.py  agent.py
astro-app/: astro.config.mjs  package.json
astro-app/src/components/: ChatPage.tsx
astro-app/src/layouts/: Layout.astro
astro-app/src/pages/: index.astro
docs/documentation/: Agents.md
evaluation/SWE-bench/scripts/: generate_opendevin_predictions.py
frontend/src/components/: SettingModal.tsx
frontend/src/i18n/: translation.json
frontend/src/services/: settingsService.ts
frontend/src/state/: settingsSlice.ts
frontend/src/types/: ConfigType.tsx
opendevin/rag/: __init__.py  builder.py
opendevin/server/agent/: agent.py
tests/: test_openrouter_agent.py  test_rag_builder.py
